[package]
name = "steam-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
prometheus = "0.13.4"
reqwest = { version = "0.12.15", features = ["json"] }
tokio-cron-scheduler = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.40"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry = "0.30.0"
dotenv = "0.15.0"
url = "2.5.4"
lazy_static = "1.5.0"
opentelemetry-stdout = "0.30.0"
serde_repr = "0.1.20"
async-trait = "0.1.88"
inventory = "0.3.21"
anyhow = "1.0.98"
