[package]
name = "steam-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio-cron-scheduler = "0.15.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry = "0.31.0"
url = "2.5.4"
lazy_static = "1.5.0"
opentelemetry-stdout = "0.31.0"
anyhow = "1.0.98"
config = { version = "0.15.19", features = ["toml"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
opentelemetry-appender-tracing = "0.31.1"
